@@ -5,6 +5,12 @@ Changelog
 
 Im Folgenden sind (substantielle) Änderungen an der Dokumentation aufgeführt.
 
+2020-07-10
+----------
+
+- Kapitel "Rollenzuweisungs-Berichte" hinzugefügt
+
+
 2020-06-11
 ----------
 
